style.css
:root {
    --bg-theme: #65b891;
    --bg-theme2: #e7e8f8;
    --bg-theme3: #f8d7ff;
    --dark-font: rgb(75, 76, 82);

    --default-pad: calc(0.4rem + 1vw);
}

@font-face {
    font-family: 'Josefin Sans';
    src: url('JosefinSans-ThinItalic.woff2') format('woff2'),
        url('JosefinSans-ThinItalic.woff') format('woff');
    font-weight: 100;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Josefin Sans';
    src: url('JosefinSans-Thin.woff2') format('woff2'),
        url('JosefinSans-Thin.woff') format('woff');
    font-weight: 100;
    font-style: normal;
    font-display: swap;
}
body {
    background-color: var(--bg-theme2);
    min-height: 100vh;
    display: grid;
    grid-template-columns: max(15vw, 275px);
    grid-template-rows: max-content 1fr;
    font-family: "Josefin Sans", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;;
}
header {
    background-color: var(--bg-theme3);
    padding: 0.5rem var(--default-pad);
    grid-area: 1 / 2 / 2 / -1;
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: calc(10px + 1vh) 0px;
    box-shadow: 0px 3px 8px -1px rgba(0, 0, 0, 0.27);
}
div#top {
    grid-area: 1 / 1 / 2 / -1;
    display: grid;
    grid-template-rows: subgrid;
    grid-template-columns: subgrid;

    input {
        background-color: var(--bg-theme2);
        border: 1px solid rgba(119, 119, 119, 0.356);
        border-radius: 10px;
        width: min(75%, 70ch)
    }
    div#top-left {
        grid-area: 1 / 1 / 2 / 2;
        text-align: center;
    }
    div#top-right {
        grid-area: 1 / 2 / 2 / 3;
        display: grid;
        grid-auto-columns: auto;
        grid-auto-flow: column;
        justify-items: center;
    }
    a {
        text-decoration: none;
        font-size: 1.1rem;
    }
}
div#bottom {
    grid-area: 2 / 1 / 3 / -1;
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 1.5fr repeat(2, 1fr);
    grid-template-rows: min-content;
   
    #bottom-left {
        display: grid;
        grid-template-columns: 0.20fr 0.7fr 1fr;
        p {
            font-weight: 500;
        }
    }
     #greeting-group {
        grid-column: 2/3;
        display: grid;
        grid-auto-flow: column;
        grid-auto-columns: max-content;
    }
    #bottom-right {
        max-width: 75%;
        grid-column: -2 / -1;
        display: grid;
        grid-auto-flow: column;
        grid-auto-columns: auto;
        grid-auto-rows: min-content;
        align-self: center;
        justify-content: space-evenly;
        gap: 1vw;
    }
    button {
        background-color: var(--bg-theme);
        border: 1px none;
        border-radius: 19px;
        padding: 0.5rem 1.5rem;
        width: 6.8rem;
        color: #FFF;
        text-align: center;
    }
}
.sidebar {
    padding: var(--default-pad);
    color: white;
    background-color: var(--bg-theme);
    font-weight: 500;
    grid-column: 1/2;
    grid-row: 1/-1;
    display: grid;
    grid-auto-rows: max-content;
}
div#logo-title {
    display: grid;
    grid-template-columns: auto 1fr;
}
.sidebar ul, main>aside ul  {
    list-style: none;
    margin: 0;
    padding: 0;
}

.sidebar nav {
    display: grid;
    grid-template-rows: auto 1fr 2fr;
}

.sidebar nav ul:last-child {
    grid-row: -2 / -1;
}

main {
    /* box-shadow: inset 0px 9px 10px -13px #000000a2; */
    /* min-height: 100vh; */
    grid-area: 2 / 2 / -1 / -1;
    display: grid;
    grid-template-columns: 3fr minmax(auto, 1fr);
    grid-auto-flow: column;
}

.card {
    background-color: #FFF;
    border-radius: 8px;
    padding: var(--default-pad);
    line-height: 1.25;
    box-shadow: 4px 5px 8px -1px rgba(0, 0, 0, 0.27);
}

.card p {
    color: var(--dark-font);
}
.card-wrapper {
    padding: var(--default-pad);
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
    grid-auto-rows: max-content;

    h3 {
        grid-row: 1/2;
        grid-column: 1/-1;
    }

    article {
        background: #ff0000;
        background: linear-gradient(90deg, var(--bg-theme) 0.5vw, rgba(255, 255, 255, 1) 0.5vw);
        height: 250px;
        overflow: auto;
        padding: var(--default-pad);
        border-color: var(--bg-theme3);
        border-radius: 8px;
    }
}
.side-cards-wrapper {
    padding: var(--default-pad);
    padding-left: 0;
    grid-column: -1/-2;
    display: grid;
    gap: 20px;
    grid-template-rows: auto;
    align-self: start;

    p {
        font-size: 0.9rem;
        display: -webkit-box;
        -webkit-line-clamp: 4;
        -webkit-box-orient: vertical;
        text-overflow: ellipsis;
        overflow: hidden;
    }
    h3 {
        padding-top: 0px;
    }
}

.side-card {
    max-height: min-content;
}

#announcements-wrapper {
    display: grid;
    gap: 10px;
    grid-template-rows: repeat(3, 1fr);
}

#trend-wrapper>ul {
    display: grid;
    grid-template-rows: repeat(4, 1fr);
    grid-auto-flow: column;
    gap: 10px;
    li {
        display: grid;
        grid-template-columns: 75px 2fr;
    }
    li img {
        grid-column: 1/2;
    }
    li p {
        font-size: 1rem;
        grid-column: 2/3;
    }
}

#trend-wrapper ul>li p:first-child {
    color: #000;
    font-size: 1.1em;
    font-weight: 500;
}

